# phonon-vlc

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  CMakeLists.txt  Messages.sh  MimeTypes.cmake  test  warning-check.rb
cmake/: FindLIBVLC.cmake
cmake/modules/: FindLIBVLC.cmake  FindPhonon.cmake  FindV4L2.cmake  FindVLC.cmake
poqm/ar/: phonon_vlc_qt.po
poqm/az/: phonon_vlc_qt.po
poqm/bg/: phonon_vlc_qt.po
poqm/bs/: phonon_vlc_qt.po
poqm/ca/: phonon_vlc_qt.po
poqm/ca@valencia/: phonon_vlc_qt.po
poqm/cs/: phonon_vlc_qt.po
poqm/da/: phonon_vlc_qt.po
poqm/de/: phonon_vlc_qt.po
poqm/el/: phonon_vlc_qt.po
poqm/en_GB/: phonon_vlc_qt.po
poqm/eo/: phonon_vlc_qt.po
poqm/es/: phonon_vlc_qt.po
poqm/et/: phonon_vlc_qt.po
poqm/eu/: phonon_vlc_qt.po
poqm/fi/: phonon_vlc_qt.po
poqm/fr/: phonon_vlc_qt.po
poqm/ga/: phonon_vlc_qt.po
poqm/gl/: phonon_vlc_qt.po
poqm/he/: phonon_vlc_qt.po
poqm/hi/: phonon_vlc_qt.po
poqm/hu/: phonon_vlc_qt.po
poqm/ia/: phonon_vlc_qt.po
poqm/id/: phonon_vlc_qt.po
poqm/is/: phonon_vlc_qt.po
poqm/it/: phonon_vlc_qt.po
poqm/ja/: phonon_vlc_qt.po
poqm/ka/: phonon_vlc_qt.po
poqm/kk/: phonon_vlc_qt.po
poqm/ko/: phonon_vlc_qt.po
poqm/lt/: phonon_vlc_qt.po
poqm/mr/: phonon_vlc_qt.po
poqm/nb/: phonon_vlc_qt.po
poqm/nds/: phonon_vlc_qt.po
poqm/nl/: phonon_vlc_qt.po
poqm/nn/: phonon_vlc_qt.po
poqm/pa/: phonon_vlc_qt.po
poqm/pl/: phonon_vlc_qt.po
poqm/pt/: phonon_vlc_qt.po
poqm/pt_BR/: phonon_vlc_qt.po
poqm/ro/: phonon_vlc_qt.po
poqm/ru/: phonon_vlc_qt.po
poqm/sk/: phonon_vlc_qt.po
poqm/sl/: phonon_vlc_qt.po
poqm/sr/: phonon_vlc_qt.po
poqm/sr@ijekavian/: phonon_vlc_qt.po
poqm/sr@ijekavianlatin/: phonon_vlc_qt.po
poqm/sr@latin/: phonon_vlc_qt.po
poqm/sv/: phonon_vlc_qt.po
poqm/tg/: phonon_vlc_qt.po
poqm/tr/: phonon_vlc_qt.po
poqm/ug/: phonon_vlc_qt.po
poqm/uk/: phonon_vlc_qt.po
poqm/vi/: phonon_vlc_qt.po
poqm/x-test/: phonon_vlc_qt.po
poqm/zh_CN/: phonon_vlc_qt.po
poqm/zh_TW/: phonon_vlc_qt.po
src/: CMakeLists.txt  audiodataoutput.cpp  audiodataoutput.h  audiooutput.cpp  audiooutput.h  avcapture.cpp  backend.cpp  backend.h  config.h.cmake  connector.cpp  connector.h  debug.cpp  debug.h  devicemanager.cpp  devicemanager.h  effect.cpp  effect.h  effectmanager.cpp  effectmanager.h  equalizereffect.cpp  equalizereffect.h  globaldescriptioncontainer.h  libvlc.cpp  libvlc.h  media.cpp  media.h  mediacontroller.cpp  mediacontroller.h  mediaobject.cpp  mediaobject.h  mediaplayer.cpp  mediaplayer.h  overlaywidget.cpp  overlaywidget.h  phonon-vlc.json.in  player.cpp  player.h  seekstack.h  sinknode.cpp  sinknode.h  (+7 more)
src/audio/: audiodataoutput.cpp  audiodataoutput.h  audiooutput.cpp  audiooutput.h  volumefadereffect.cpp  volumefadereffect.h
src/experimental/: avcapture.cpp
src/utils/: debug.cpp  debug.h  debug_p.h  libvlc.cpp  libvlc.h  media.cpp  media.h  mediaplayer.cpp  mime.h.cmake  vstring.h
src/video/: videodataoutput.cpp  videodataoutput.h  videographicsobject.cpp  videographicsobject.h  videomemorystream.cpp  videomemorystream.h  videosurfaceoutput.cpp  videosurfaceoutput.h  videowidget.cpp  videowidget.h
src/video/mac/: nsvideoview.h  nsvideoview.mm  vlcmacwidget.h  vlcmacwidget.mm
test/phota/: mainwindow.cpp  mainwindow.h  mediacontroller.cpp  mediacontroller.h  phota.pro  videoeffects.cpp  videoeffects.h  videoeffects.ui
vlc/: AUTHORS  CMakeLists.txt  audiodataoutput.cpp  audiodataoutput.h  audiooutput.cpp  audiooutput.h  avcapture.h  backend.cpp  backend.h  debug.cpp  debug.h  debug_p.h  devicemanager.cpp  devicemanager.h  devicescan.cpp  devicescan.h  effect.cpp  effect.h  effectmanager.cpp  effectmanager.h  globaldescriptioncontainer.h  libvlc.cpp  libvlc.h  mediacontroller.cpp  mediacontroller.h  mediaobject.cpp  mediaobject.h  nsvideoview.h  nsvideoview.mm  overlaywidget.h  seekstack.cpp  seekstack.h  sinknode.cpp  sinknode.h  streamhooks.cpp  streamhooks.h  streamreader.cpp  streamreader.h  v4l2devices.cpp  v4l2devices.h  (+22 more)
vlc/experimental/: CMakeLists.txt  avcapture.cpp  avcapture.h
vlc/mac/: nsvideoview.h  nsvideoview.mm  vlcmacwidget.h  vlcmacwidget.mm
